--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,3 +16,6 @@ dependencies = [
     "torchvision>=0.19.1",
     "torchviz>=0.0.2",
 ]
+[tool.coverage.report]
+include = ["src/**/*.py"]
+show_missing = true
