--- a/.github/workflows/cy.yml
+++ b/.github/workflows/cy.yml
@@ -20,6 +20,7 @@ jobs:
         run: pip install -r requirements.txt
   
       - name: Run tests
+        run: pytest tests --import-mode=append
         run: pytest --cov --cov-report=xml
 
       - name: Upload results to Codecov
