--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,9 @@ dependencies = [
     "loguru>=0.7.2",
     "rich>=13.8.1",
     "tensorboard>=2.18.0",
+    "rootutils>=1.0.7",
     "timm>=1.0.9",
-    "torch>=2.4.1",
-    "torchvision>=0.19.1",
+    "torch==2.4.1+cpu",
+    "torchvision==0.19.1+cpu",
     "torchviz>=0.0.2",
 ]
