changes to add tests for train eval  infer

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,4 +16,7 @@ dependencies = [
     "torch==2.4.1+cpu",
     "torchvision==0.19.1+cpu",
     "torchviz>=0.0.2",
+    "scikit-learn",
+    "scipy",
+    "matplotlib",
 ]
