--- a/config/hydra/default.yaml
+++ b/config/hydra/default.yaml
@@ -2,8 +2,8 @@
 
 # enable color logging
 defaults:
-  - override hydra_logging: colorlog
-  - override job_logging: colorlog
+  - override hydra_logging: default
+  - override job_logging: default
 
 # output directory, generated dynamically on each run
 run:
@@ -11,9 +11,21 @@ run:
 sweep:
   dir: ${paths.log_dir}/${task_name}/multiruns/${now:%Y-%m-%d}_${now:%H-%M-%S}
   subdir: ${hydra.job.num}
-
 job_logging:
+  version: 1
+  formatters:
+    simple:
+      format: '[%(asctime)s][%(name)s][%(levelname)s] - %(message)s'
   handlers:
-    file:
+    console:
+      class: logging.StreamHandler
+      formatter: simple
+      stream: ext://sys.stdout
+  root:
+    level: INFO
+    handlers: [console]
+#job_logging:
+#  handlers:
+#    file:
       # Incorporates fix from https://github.com/facebookresearch/hydra/pull/2242
-      filename: ${hydra.runtime.output_dir}/${task_name}.log
+#      filename: ${hydra.runtime.output_dir}/${task_name}.log
