--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,12 @@ loguru
 hydra-colorlog
 rootutils>=1.0.7
 # sh            # for running bash commands in some tests (linux/macos only)
+
+
+hydra-colorlog
+hydra-core
+loguru==0.7.2
+rich==13.8.1
+rootutils>=1.0.7
+tensorboard==2.17.1
+timm==1.0.9
